--- a/public/index.css
+++ b/public/index.css
@@ -34,11 +34,11 @@
 
 #start-message {
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 24px;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
-    display: none;
+    display: block;
 }
